# BankInzicht

./: .gitignore  Makefile  README.md  make.bat  pyproject.toml  requirements.txt  setup.bat
src/: analysis.py  app.py  constants.py  data_loader.py  dataframe.py  importer.py  label_db.py  plot_window.py  settings.py  utils.py  visualization.py
src/tabs/: label_chart.py  label_details.py  label_editor.py  label_netto.py  label_tegenpartij.py  maand_netto.py  maand_overzicht.py  table_base.py  tegenpartij_chart.py  tegenpartij_netto.py  tijdlijn_chart.py
style/: dark.qss  light.qss  main.qss
tests/: conftest.py  test_analysis.py  test_data_loader.py  test_import.py  test_mutation.py
